--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,9 @@
-PORT=8000
+PORT=3000
 
 DB_HOST=postgres
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=nestdb
+
+GEMINI_API_KEY=SUACHAVEAQUI
